--- a/index_tree_object.html
+++ b/index_tree_object.html
@@ -43,7 +43,7 @@
 	<body >	
 			<div id="text-res" class="ui-widget" style="height:94%;">
 				<div style="width: 100%;height: 30px;padding-left: 5px;padding-top: 5px;">
-					<button id="btnHideTree" >Hide additional panel</button> <button id="btnAddQuery" disabled >Add new query</button>
+					<button id="btnHideTree" >Hide additional panel</button> <button id="btnAddQuery"  >Add new query</button>
 				</div>
 				<div id="left-column" style="float:left;width:30%">														
 					<!--Дерево представления объектов-->					
